--- a/app/src/main/res/layout/activity_register_cook.xml
+++ b/app/src/main/res/layout/activity_register_cook.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="28dp"
-        android:text="Regist"
+        android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
