--- a/app/src/main/res/layout/activity_register_cook.xml
+++ b/app/src/main/res/layout/activity_register_cook.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="28dp"
-        android:text="Register"
+        android:text="Regist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -37,8 +37,8 @@
 
     <EditText
         android:id="@+id/teDesc"
-        android:layout_width="365dp"
-        android:layout_height="106dp"
+        android:layout_width="340dp"
+        android:layout_height="46dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="12dp"
         android:background="@android:drawable/alert_light_frame"
