--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,8 +7,7 @@
     tools:context="uott.seg.mealerproject.activities.RegisterActivity">
 
 
-
-<EditText
+    <EditText
         android:id="@+id/teFName"
         android:layout_width="210dp"
         android:layout_height="35dp"
@@ -18,7 +17,7 @@
         android:hint="First Name"
         android:inputType="textPersonName"
         android:singleLine="true"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#AAABAE"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tvFName"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +41,7 @@
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#AAABAE"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tvLName"
         app:layout_constraintTop_toBottomOf="@+id/teFName" />
@@ -55,7 +54,7 @@
         android:ems="10"
         android:hint="Retype your password"
         android:inputType="textPassword"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#AAABAE"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/tvPwd2"
         app:layout_constraintTop_toBottomOf="@+id/tePwd" />
@@ -80,15 +79,15 @@
         android:ems="10"
         android:hint="your.email@uOttawa.ca"
         android:inputType="textEmailAddress"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#AAABAE"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tvEmail"
         app:layout_constraintTop_toBottomOf="@+id/teLName" />
 
     <EditText
         android:id="@+id/teAddr"
-        android:layout_width="352dp"
-        android:layout_height="82dp"
+        android:layout_width="343dp"
+        android:layout_height="48dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="4dp"
         android:background="@android:drawable/alert_light_frame"
@@ -141,7 +140,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColorHint="@color/material_dynamic_neutral70"
+        android:textColorHint="#AAABAE"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tvPwd"
         app:layout_constraintTop_toBottomOf="@+id/teEmail" />
