--- a/app/src/main/res/layout/complait_item.xml
+++ b/app/src/main/res/layout/complait_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/material_dynamic_neutral90"
+        android:background="#E1E3E5"
         android:text="Cook: "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -37,7 +37,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/material_dynamic_neutral90"
+        android:background="#E1E3E5"
         android:text="Client: "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@color/design_default_color_error"
+            android:backgroundTint="#B00020"
             android:text="Revoke"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_orange_dark"
+            android:backgroundTint="#ffff8800"
             android:text="Suspend"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_green_dark"
+            android:backgroundTint="#ff669900"
             android:text="Dismiss"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -88,7 +88,7 @@
         android:layout_width="409dp"
         android:layout_height="3dp"
         android:layout_marginTop="4dp"
-        android:background="@color/material_dynamic_neutral50"
+        android:background="#747679"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvClientEmail" />
 
