--- a/app/src/main/res/layout/activity_admin_welcome.xml
+++ b/app/src/main/res/layout/activity_admin_welcome.xml
@@ -8,14 +8,10 @@
 
     <include
         layout="@layout/activity_welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="3dp"
+        android:layout_width="414dp"
+        android:layout_height="907dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="3dp" />
 
     <Button
         android:id="@+id/btnComplaint"
