--- a/app/src/main/res/layout/activity_cook_welcome.xml
+++ b/app/src/main/res/layout/activity_cook_welcome.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     tools:context=".activities.WelcomeCookActivity">
 
 
@@ -24,6 +25,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="24dp"
         android:text="Your Account Status:"
+        android:fontFamily="@font/outfitmedium"
         android:textColor="#040303"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
