--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="137dp"
         android:layout_marginBottom="21dp"
         android:fontFamily="@font/outfitmedium"
-        android:text="@string/Logo"
+        android:text="Mealer"
         android:textColor="#FFFFFF"
         android:textSize="70sp"
         app:layout_constraintBottom_toTopOf="@+id/boxbg"
