--- a/app/src/main/res/layout/activity_register_cook.xml
+++ b/app/src/main/res/layout/activity_register_cook.xml
@@ -18,25 +18,39 @@
         android:id="@+id/btnAddCook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="298dp"
+        android:layout_marginTop="667dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="16dp"
         android:text="Regist"
-        tools:layout_editor_absoluteX="293dp"
-        tools:layout_editor_absoluteY="797dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvVoidCheck"
         android:layout_width="222dp"
         android:layout_height="37dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="499dp"
+        android:layout_marginEnd="173dp"
+        android:layout_marginBottom="195dp"
         android:text="Load a Void Check Here :"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/teDesc" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
         android:id="@+id/teDesc"
         android:layout_width="340dp"
         android:layout_height="46dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="445dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginBottom="240dp"
         android:background="@android:drawable/alert_light_frame"
         android:ems="10"
         android:inputType="textPostalAddress|textMultiLine"
@@ -45,34 +59,53 @@
         android:singleLine="false"
         android:textAlignment="viewStart"
         android:textSize="14sp"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="576dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="349dp"
         android:layout_height="101dp"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="687dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="545dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="85dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/btnLoad"
         android:layout_width="98dp"
         android:layout_height="40dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="275dp"
+        android:layout_marginTop="495dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="196dp"
         android:text="Load"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvVoidCheck"
-        app:layout_constraintTop_toBottomOf="@+id/teDesc" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvCookDesc"
         android:layout_width="140dp"
         android:layout_height="21dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="386dp"
+        android:layout_marginEnd="248dp"
+        android:layout_marginBottom="324dp"
         android:text="Cook Description :"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="544dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
