--- a/app/src/main/res/layout/activity_cook_welcome.xml
+++ b/app/src/main/res/layout/activity_cook_welcome.xml
@@ -49,6 +49,25 @@
         android:text="Add meal to menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.818"
-        app:layout_constraintStart_toEndOf="@+id/btnMeals"
         app:layout_constraintTop_toBottomOf="@+id/tvCookStatus" />
+
+    <Button
+        android:id="@+id/btnProcessOrder"
+        android:layout_width="181dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:text="View Orders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddMealMenu" />
+
+    <Button
+        android:id="@+id/btnMyDetails"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="232dp"
+        android:text="My Profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddMealMenu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
