--- a/app/src/main/res/layout/meal_item.xml
+++ b/app/src/main/res/layout/meal_item.xml
@@ -19,7 +19,7 @@
         <!--app:layout_constraintTop_toBottomOf="@+id/tvFirstName" -->
 
         <TextView
-            android:id="@+id/tvMealName"
+            android:id="@+id/tvMyMealName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"
