Deliverable 4 - commit Tested on API28. Please delete your emulator and re-create before installing the app: the database structure has been updated and needs to be recreated. For access accounts please see README.txt

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
     <gradient
         android:type="linear"
-        android:startColor="#FFA561"
-        android:centerColor="@color/mealerPink"
-        android:endColor="@color/mealerWatermelon"
+        android:startColor="#FF7961"
+        android:centerColor="#FFFF7961"
+        android:endColor="#FFFF7961"
         android:angle="-45"
 
 
